# deadSurvivors

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  cmake_install.cmake
res/: compileShaders.sh
res/shaders/: fragment.spv  pFragment.spv  pVertex.spv  vertex.spv
res/shaders_code/: fragment.glsl  pFragment.glsl  pVertex.glsl  vertex.glsl
src/: appData.hpp  gameManager.cpp  gameManager.hpp  gameTypes.hpp  guiTypes.hpp  levelManager.cpp  levelManager.hpp  main.cpp  renderer.cpp  renderer.hpp  saveFiles.cpp  saveFiles.hpp  spells.cpp  spells.hpp  utils.hpp
